--- a/css/common.css
+++ b/css/common.css
@@ -27,7 +27,7 @@
 header {
   width: 100%;
   height: 80px;
-  min-width: 1150px;
+  min-width: 1024px;
   margin: 0 auto;
   background: #ffffff;
 }
@@ -192,8 +192,10 @@ header .headerWrap > nav.gnb > ul > li:last-child .dropMenu img {
 }
 
 header .headerWrap > nav.gnb > ul > li:last-child .dropMenu > ul > li {
+  display: block !important;
   padding: 5px 0;
   text-align: center;
+  z-index: 99;
 }
 
 header .headerWrap > nav.gnb > ul > li:last-child .dropMenu > ul.dropsubMenu {
@@ -207,6 +209,13 @@ header .headerWrap > nav.gnb > ul > li.mobileMenu {
 /*******************************************************************
 	* 반응형 
 *******************************************************************/
+@media screen and (min-width: 1025px) and (max-width: 1201px) {
+  .contents .contentsWrap > .rightBox {
+    float: none;
+    width: 100%;
+  }
+}
+
 @media screen and (max-width: 1024px) {
   header {
     min-width: auto;
