--- a/css/main.css
+++ b/css/main.css
@@ -111,7 +111,7 @@ caption {
 header {
   width: 100%;
   height: 80px;
-  min-width: 1150px;
+  min-width: 1024px;
   margin: 0 auto;
   background: #ffffff;
 }
@@ -276,6 +276,7 @@ header .headerWrap > nav.gnb > ul > li:last-child .dropMenu img {
 }
 
 header .headerWrap > nav.gnb > ul > li:last-child .dropMenu > ul > li {
+  display: block !important;
   padding: 5px 0;
   text-align: center;
 }
@@ -291,6 +292,13 @@ header .headerWrap > nav.gnb > ul > li.mobileMenu {
 /*******************************************************************
 	* 반응형 
 *******************************************************************/
+@media screen and (min-width: 1025px) and (max-width: 1201px) {
+  .contents .contentsWrap > .rightBox {
+    float: none;
+    width: 100%;
+  }
+}
+
 @media screen and (max-width: 1024px) {
   header {
     min-width: auto;
