--- a/css/main.css
+++ b/css/main.css
@@ -135,6 +135,7 @@ header .headerWrap > .serchBox {
   border-left: solid 1px #e6e6e6;
   margin-top: 25px;
   position: relative;
+  overflow: hidden;
 }
 
 header .headerWrap > .serchBox input {
@@ -279,6 +280,7 @@ header .headerWrap > nav.gnb > ul > li:last-child .dropMenu > ul > li {
   display: block !important;
   padding: 5px 0;
   text-align: center;
+  z-index: 99;
 }
 
 header .headerWrap > nav.gnb > ul > li:last-child .dropMenu > ul.dropsubMenu {
@@ -306,7 +308,7 @@ header .headerWrap > nav.gnb > ul > li.mobileMenu {
   header .headerWrap {
     width: 94%;
     max-width: 1024px;
-    min-width: 320px;
+    min-width: 90%;
     margin: 0 auto;
   }
   header .headerWrap nav.gnb ul > li {
