--- a/scss/detail.scss
+++ b/scss/detail.scss
@@ -862,10 +862,10 @@
                     }
                     > .chartBox {
                         .snsChart{
-                            width: 1000px;
-                            height: 1000px;
-                            margin-top: -100px;
-                            margin-left: -90px;
+                            width: 100%;
+                            // height: 1000px;
+                            margin-top: 0px;
+                            margin-left: 0px;
                             float:none;
                         }
                         .snsValueBox {
